--- a/P010457.opf/meta.yml
+++ b/P010457.opf/meta.yml
@@ -10,8 +10,10 @@ source_metadata:
       title: ''
       volume_number: 1
       total_pages: 2238
+      base_file: v001.txt
     37a12dab553445af9348f67abb537a40:
       image_group_id: I1KG4820
       title: ''
       volume_number: 2
       total_pages: 3348
+      base_file: v002.txt
