--- a/P010457.opf/layers/v001/Pagination.yml
+++ b/P010457.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 8a736bee9d2d465caa9a82b7dce94279
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   b6c35061d3d14cc8ba638cbcb072be04:
