--- a/P010457.opf/layers/v002/Pagination.yml
+++ b/P010457.opf/layers/v002/Pagination.yml
@@ -1,5 +1,5 @@
 id: 2c2a2042b08243428d3b4068abcd0ffc
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   8dc1a42d4f7d4ba68e0ae9bf73635b85:
